--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   firebase_database: ^10.5.0 
   cloud_firestore: ^4.16.0
   provider: ^6.1.2
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.1
     
 
 dev_dependencies:
