map navigation for mechanic is implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,8 @@ dependencies:
   cloud_firestore: ^4.16.0
   provider: ^6.1.2
   flutter_map: ^6.1.0
-  latlong2: ^0.9.1
+  latlong2: ^0.9.1 
+  url_launcher: ^6.2.5
     
 
 dev_dependencies:
